# ParallelLauncher

./: CMakeLists.txt  CMakePresets.json
includes/: SignalHandler.hpp  ThreadManager.hpp
src/: SignalHandler.cpp
tests/: test_ThreadManager.cpp
